DO-6490 -1.2.b QA [Search] UI: alignment + padding + scrolling for all tabs under Resource+Collection: Fixed.

--- a/src/main/java/org/ednovo/gooru/client/mvp/search/search.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/search/search.css
@@ -122,7 +122,8 @@
 }
 
 .panelFooterMenuInfo{
-	padding:15px;
+	/* padding:15px; */
+	padding-top: 10px;
 }
 .panelFooterMenuInfo a{
 
